--- a/04-Inspector.html
+++ b/04-Inspector.html
@@ -9,9 +9,9 @@
 <body>
     <a-scene>
          <!-- To activate Inspector: Press Ctrl (Cmd) + Alt + I -->
-         <a-box id="box1" color="#aa0000" position="0 2.5 -3" material="color: #ff80ff" geometry="" rotation="0 45 0"></a-box>
-         <a-box id="box2" rotation="0 0 45" scale="0.5 1 0.5" color="#00aa00" position="2 1 -3"></a-box>
-         <a-box id="box3" color="#aaaa00" position="-2 1 -3" material="color: #808080" geometry="" scale="2 2 2"></a-box>
+         <a-box id="box1" color="#aa0000" position="0 2.5 -3" material="color: #ff80ff" geometry="primitive: icosahedron" rotation="0 45 0"></a-box>
+         <a-box id="box2" rotation="0 0 45" scale="0.5 1 0.5" color="#00aa00" position="2 1 -3" geometry="primitive: dodecahedron"></a-box>
+         <a-box id="box3" color="#aaaa00" position="-1.9 1 -3" material="color: #731c1c" geometry="primitive: torus; radius: 0.71" scale="0.72 0.68 0.8" rotation="0 10 0"></a-box>
          <a-entity geometry="primitive: octahedron" material="color: #0080c0" position="0 0 -3"></a-entity>
     </a-scene>
 </body>
